	gtk/Graphics/UI/Gtk/TreeList/TreeViewColumn.chs.pp: export to{Object}
	functions.
	
	* gtk/Graphics/UI/Gtk/Windows/AboutDialog.chs.pp,
	gtk/Graphics/UI/Gtk/Windows/Dialog.chs.pp,
	gtk/Graphics/UI/Gtk/Windows/Window.chs.pp,
	gtk/Graphics/UI/Gtk/Windows/WindowGroup.chs: export to{Object}
	functions.

	* glade/Graphics/UI/Gtk/Glade.chs: update docs and coding style of
	bindings.

2005-10-18 Duncan Coutts <duncan@coutts.uklinux.net>

	* gtk/Graphics/UI/Gtk/Gdk/Events.hsc: more cleanups to the Event
	structure. Rename various record selector names. Use Word32 for
	timestamps rather than Integer. Use the Gtk.Keys module rather than
	defining things locally.

	* gtk/Graphics/UI/Gtk/Gdk/Keys.chs: remove use of c2hs {# fun #}
	hooks, use normal {# call #} hooks instead. Add keyvalToChar which is
	used in the Event marshaling. Add documentation.

	* gtk/Graphics/UI/Gtk/General/StockItems.hsc: use Gtk.Keys.KeyVal for
	the Keyval rather than Integer.

	* gtk/Graphics/UI/Gtk/Windows/Window.chs.pp: use Word32 for timestamps
	rather than Integer.

	* gtk/Graphics/UI/Gtk/Display/Label.chs.pp: use KeyVal imported from
	Gtk.Keys module rather than local definition.

	* demo/cairo/Drawing.hs, demo/fastdraw/FastDraw.hs,
	demo/graphic/Drawing.hs, demo/treeList/ListTest.hs: fix demos to use
	new event record field names.

	* cairo/Graphics/Rendering/Cairo/Types.chs: remove RULES pragma. It
	duplicates rules from ghc's libraries anyway and causes compilation
	problems with ghc-6.2.

	* demo/cairo/Text.hs: fix the text demo to take account of the changed
	behaviour of showText in cairo 1.0.

	* cairo/Graphics/Rendering/Cairo/Internal.hs,
	cairo/Graphics/Rendering/Cairo.hs: move the definition of the Render
	monad into the Internal module.

	* Makefile.am: various changes: do not exclude the System.Glib.Signals
	module from the haddock docs, merely hide it. correct
	gtk/Graphics/UI/Gtk/Cairo.chs to gtk/Graphics/UI/Gtk/Cairo.chs.pp in